@@ -44,6 +44,7 @@ $EM_CONF[$_EXTKEY] = array(
 	),
 	'_md5_values_when_last_written' => 'a:17:{s:9:"ChangeLog";s:4:"2830";s:7:"GPL.txt";s:4:"a073";s:23:"class.tx_apimacmade.php";s:4:"7e4f";s:12:"ext_icon.gif";s:4:"c839";s:14:"doc/manual.sxw";s:4:"d0c0";s:29:"res/js/prototype/prototype.js";s:4:"3766";s:30:"res/js/scriptaculous/CHANGELOG";s:4:"3406";s:32:"res/js/scriptaculous/MIT-LICENSE";s:4:"9f3d";s:27:"res/js/scriptaculous/README";s:4:"5c5d";s:35:"res/js/scriptaculous/src/builder.js";s:4:"f2ab";s:36:"res/js/scriptaculous/src/controls.js";s:4:"6e5f";s:36:"res/js/scriptaculous/src/dragdrop.js";s:4:"7f11";s:35:"res/js/scriptaculous/src/effects.js";s:4:"ab48";s:41:"res/js/scriptaculous/src/scriptaculous.js";s:4:"783b";s:34:"res/js/scriptaculous/src/slider.js";s:4:"8baa";s:33:"res/js/scriptaculous/src/sound.js";s:4:"5a58";s:36:"res/js/scriptaculous/src/unittest.js";s:4:"da7d";}',
 	'suggests' => array(
+		'tslib_patcher' => '0.1.1-'
 	),
 );
 
